--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="home">Inicio</string>
     <string name="search">Buscar</string>
     <string name="library">Biblioteca</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="greeting">Buenos días!</string>
+    <string name="new_releases">Nuevos lanzamientos</string>
 </resources>
