--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="greeting">Buenos días!</string>
     <string name="new_releases">Nuevos lanzamientos</string>
+    <string name="search_hint">Busca artistas o canciones</string>
 </resources>
